@@ -1,10 +1,14 @@
+2008-04-10  Richard Dale  <richard.j.dale@gmail.com>
+
+	* Added the missing QWebHitTestResult.cs source. Thanks to annma for 
+	  noticing
+
 2008-04-20  Arno Rehn  <arno@arnorehn.de>
 
 	* Since Mono 1.9 inherited private members are not included in the search
 	  by Type.Get*. So now search in the whole hierarchy for the private field
 	  'smokeObject'.
 
-2008-04-10  Richard Dale  <richard.j.dale@gmail.com>
 
 	* Regenerated the Qyoto sources from the Qt 4.4 rc1 headers
 
